# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linters.yml
brain_games/: __init__.py  cli.py  game_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py
